--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -31,7 +31,7 @@
 .games  {
     display: flex;
     border-radius: 20px;
-    background: rgba(255, 255, 255, 0.7);
+    /* background: rgba(255, 255, 255, 0.7); */
     
     font-size: 1.6rem;
    
@@ -43,20 +43,57 @@
     padding: 10px 0;
 
 }
-.games .ticktacktoe {
+.games .manRun {
+    position: relative;
     margin: auto;
-     width: 300px;
-     height: 300px;
+     width: 100%;
+     height: 160px;
      background: #333;
      border-radius: 4px;
-}
-.ticktackButton{
-     width: 100px;
-     height: 100px;
-     border-radius: 4px;
-     background: #333;
+
+     transform-origin: bottom;
+     transform-style: preserve-3d;
+     transform: perspective(500px) rotateX(30deg);
 }
 
-.ticktackButton.tick{
-    background: #fff;
+.manRun::before {
+    content: '';
+    position: absolute;
+    transform: translateY(-50%);
+    width: 100%;
+    height: 10px;
+    top: 50%;
+    left: 0;
+
+    background: linear-gradient(90deg, #fff 0%, #fff 70%, #333 70%, #333 100%) ;
+    background-size: 120px;
+   
+    animation: animateRoad 0.4s linear infinite;
+}
+@keyframes animateRoad {
+    0% {
+        background-position: 0px;
+    } 100% {
+        background-position: -120px;
+    }
+}
+
+.man {
+    position: relative;
+    bottom: -150px;
+    left: 100px;
+    height: 148px;
+    width: calc(612px/6);
+    
+    background-image: url('./walk-right.png');
+    transform: perspective(500px) rotateX(-25deg) translateY(-150px);
+    animation: animateMan 1s steps(6) infinite;
+
+}
+@keyframes animateMan {
+    from {
+        background-position: 0;
+    } to {
+        background-position: -612px;
+    }
 }
