--- a/src/pages/Personal/Todo/Todo.module.css
+++ b/src/pages/Personal/Todo/Todo.module.css
@@ -1,16 +1,19 @@
 .todoApp {
   width: 100%;
   height: 600vh;
+  display: flex;
 }
-
+/* TODO FROM  */
 .todoFrom {
     background: rgba(255, 255, 255, 0.7);
 
     border-radius: 2px;
+    min-height: 800px;
+    max-height: 200px;
+    width: 500px;
+    margin: 20px auto;
 
-    min-height: 500px;
-    width: 400px;
-    margin: 40px auto;
+    display: flex;
 }
 
 .todoFrom input {
@@ -18,14 +21,17 @@
     color: #fff;
 
     border: 0;
-    border-radius: 10px;
     font-size: 18px;
 
-    width: 200px;
+    width: 234px;
     height: 50px;
     padding: 0 20px;
-    margin: 20px;
-}   
+    margin: 20px 0;
+}
+.todoFrom span {
+  margin: 20px 0;
+  
+}     
 
 .todoFrom input::placeholder {
   color: rgba(255, 255, 255, 0.5);
@@ -39,7 +45,8 @@
 .btn {
   height: 50px;
   width: 80px;
-  border-radius: 5px;
+  margin: 20px 0 20px 20px;
+
 
   border: none;
   cursor: pointer;
@@ -50,14 +57,22 @@
 
 }
 
-.icon {
-  font-size: 1.6rem;
+.todoOption {
+  height: 20px;
+  width: 80px;
+  border-radius: 5px;
+
+  border: none;
+  cursor: pointer;
+  font-weight: bolder;
+
+  background-color: #fff;
+  color: #333;
+  margin: 24px;
+
 }
 
-.icon:hover {
 
-  color: #fff;
-}
 .job {
   font-size: 18px;
 
@@ -77,4 +92,50 @@
   
   text-transform: capitalize;
   justify-content: space-between;
+}
+.job ul {
+  display: flex;
+}
+.job div {
+  display: none;
+}
+.job:hover {
+  background: linear-gradient(to top left, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.7));
+}
+.job:hover div {
+  display: block ;
+}
+
+.icon {
+  font-size: 1.6rem;
+  margin: 0 10px 0 0;
+}
+.icon:hover {
+  color: red;
+}
+.icon.iconCheck:hover {
+  color: green;
+}
+
+/* TODO MENU  */
+.todoMenu {
+  background: rgba(255, 255, 255, 0.7);
+
+    border-radius: 2px;
+    min-height: 800px;
+    max-height: 200px;
+    width: 500px;
+    margin-left: 50px;
+}
+.todoMenu input {
+  background-color: #333;
+  color: #fff;
+
+  border: 0;
+  font-size: 18px;
+
+  width: 234px;
+  height: 50px;
+  padding: 0 20px;
+  margin: 20px 0;
 }
